--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 * {
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Courier New', Courier, sans-serif;
     /*border: 1px solid gray;*/
 }
 html {
@@ -10,7 +10,18 @@ html {
     width: 100%;
     height: 100%;
 
-    background-color: rgb(0, 0, 0);
+    background-color: white;
+}
+body {
+    display: flex;
+
+    width: auto;
+    height: auto;
+    padding: 60px 30px;
+
+    border-radius: 35px;
+    background-color: black;
+    box-shadow: 5px 5px 20px rgb(100, 100, 100);
 }
 
 
@@ -42,30 +53,24 @@ html {
     align-items: center;
     justify-content: center;
 }
-
 button {
     width: 80px;
     height: 80px;
     border-radius: 100%;
     border: none;
-    transition: 0.1s;
+    transition: 0.3s;
     font-size: 35px;
+    font-weight: bold;
 }
-
 button[value="0"] {
     width: 178px;
     border-radius: 50px;
 }
-
 button:hover {
     background-color: grey;
-    transition: 1.1s;
+    transition: 0.3s;
 }
-
-.operator {
-    background-color: greenyellow;
-}
-.equal {
+.operator, .equal {
     background-color: greenyellow;
 }
 .digit {
@@ -83,8 +88,8 @@ button:hover {
 
     min-height: 129px;
     border-radius: 12px;
-    
     font-size: 90px;
+
     color: white;
-    background-color: rgb(15, 15, 15);
+    background-color: rgb(25, 25, 25);
 }
