--- a/styles.css
+++ b/styles.css
@@ -1,37 +1,39 @@
 * {
     box-sizing: border-box;
     font-family: 'Courier New', Courier, sans-serif;
-    /*border: 1px solid gray;*/
+    margin: 0px;
+    padding: 0px;
 }
 html {
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100%;
-
     background-color: white;
 }
 body {
+    width: 100%;
+    height: 100%;
     display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
 
-    width: auto;
-    height: auto;
-    padding: 60px 30px;
-
+/*CONTAINER*/
+.calContainer {
+    padding: 25px 25px;
     border-radius: 35px;
     background-color: black;
-    box-shadow: 5px 5px 20px rgb(100, 100, 100);
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
-
-
-
-.calculator {
+.mainContainer {
+    height: 100%;
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
-    gap: 30px;
 }
-
 .buttonContainer {
     width: 100%;
     height: 100%;
@@ -45,14 +47,29 @@ body {
     width: 376px;
 }
 
+/*CALCULATOR BODY*/
+.calculator {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
 
+/*DISPLAY*/
+.display {
+    display: flex;
+    justify-content: right;
+    padding: 13px;
+
+    max-width: 376px;
+    min-height: 129px;
+    border-radius: 15px;
+    font-size: 90px;
+
+    color: white;
+    background-color: rgb(25, 25, 25);
+}
 
 /*BUTTONS*/
-#buttons {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 button {
     width: 80px;
     height: 80px;
@@ -62,34 +79,45 @@ button {
     font-size: 35px;
     font-weight: bold;
 }
-button[value="0"] {
+button[value="="] {
     width: 178px;
     border-radius: 50px;
+    background-color: white;
 }
 button:hover {
-    background-color: grey;
     transition: 0.3s;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 .operator, .equal {
-    background-color: greenyellow;
+    background-color: orange;
 }
 .digit {
-    background-color: rgb(50, 50, 50);
+    background-color: rgb(36, 36, 36);
     color: white;
 }
 
-
-
-/*DISPLAY*/
-.display {
+/*FOOTER*/
+footer {
     display: flex;
-    justify-content: right;
-    padding: 13px;
+    justify-content: center;
+    align-items: center;
 
-    min-height: 129px;
-    border-radius: 12px;
-    font-size: 90px;
+    width: 100%;
+    padding: 15px;
+    position: sticky;
+    top: 100%;
+    gap: 20px;
 
+    text-align: center;
+    background-color: black;
     color: white;
-    background-color: rgb(25, 25, 25);
+}
+footer a {
+    font-weight: bold;
+    color: orange;
+    text-decoration: none;
+}
+footer a:hover {
+    color: orangered;
+    text-decoration: underline;
 }
